Fixed overflow

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -15,13 +15,16 @@ body {
   font-weight: normal;
   scroll-behavior: smooth;
   line-height: 1.5;
-  background: #f4faf7;
+  background: #fff;
   width: 100%;
   height: 100%;
   padding: 0;
   margin: 0;
-  overflow-x: hidden;
   box-sizing: border-box;
+
+  > #__nuxt {
+    overflow-x: hidden;
+  }
 
   &::-webkit-scrollbar {
     width: 10px;
@@ -107,6 +110,10 @@ p>a:hover {
 .el-container {
   max-width: 90% !important;
   margin: auto;
+}
+
+.el-row {
+  width: 100%;
 }
 
 .el-form {
